# OCR_Rx

./: README.md  main.py  medical_ocr_learning.db  pharma_dictionary.db  pharma_dictionary.py  pyproject.toml  streamlit.py  test_setup.py
