[project]
name = "ocr-rx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-cognitiveservices-vision-computervision>=0.9.1",
    "easyocr>=1.7.2",
    "msrest>=0.7.1",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "pymupdf>=1.26.4",
    "pytesseract>=0.3.13",
    "streamlit>=1.50.0",
]
